2003-07-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/text-spanner.cc (brew_molecule): use bracket-flare
	iso. edge-widen.

	* lily/piano-pedal-engraver.cc (process_music): change from
	process_acknowledged ()

	* lily/piano-pedal-bracket.cc: new file. Change
	setup_pedal_bracket in after_line_breaking callback.  Thoroughly
	cleaned up.

	* lily/text-spanner.cc (setup_pedal_bracket): cleanup.

	* input/regression/tuplets.ly (texidoc): rename file.

	* po/fr.po: update

	* buildscripts/lilypond-profile.sh: error message if script is not
	sourced.

	* lily/tuplet-bracket.cc (make_bracket): change edge-widen to
	bracket-flare
	(make_bracket): simplify code.

	* lily/parser.yy (verbose_command_req): catch typos in \key scale
	argument.

	* python/lilylib.py (lilypond_version_check): new function

	* scripts/lilypond-book.py (TexiPaper.incl_opt): idem

	* scripts/ly2dvi.py (run_lilypond): add version check.

	* scripts/lilypond-book.py (option_definitions): typo

	* scripts/ly2dvi.py (include_path): typo

	* make/lilypond.redhat.spec.in (Group): add INSTALL.txt

	* lily/parse-scm.cc (parse_handler): typo

	* Documentation/user/macros.itexi: use @heading for headings.

	* Documentation/user/refman.itely: updates, fixes.

2003-07-23  Heikki Junes  <hjunes@cc.hut.fi>

	* po/fi.po: add Finnish translations. fixes.

	* stepmake/stepmake/toplevel-targets.make: rpm-mandrake -> rpm-mdk.

	* lily/piano-pedal-engraver.cc: fixed warnings, got working syntax
	from lily/glissando-engraver.cc.

2003-07-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/volta-bracket.cc (brew_molecule): opps: only wipe number
	for non-first _broken_ bracket.

	* Documentation/user/refman.itely: corrections.

2003-07-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/new-fingering-engraver.cc (position_scripts): add heads to
	support of the fingerings.

	* po/fr.po: French translation update.

	* lily/parser.yy (Composite_music): add extra \ for "\apply" in
	strings.
