@@ -8,7 +8,8 @@ The bracket does not interfere with the stafflines, and the number is
 centered in the gap in the bracket.
 
 The bracket stops at the end of the stems, if the stems have the same
-direction as the
+direction as the bracket. The endings can be adjusted with
+@code{bracket-flare}.
 
 
 "
@@ -20,7 +21,7 @@ direction as the
 	\notes \context Voice \relative c'' {
 		 \times 2/3 { a8 b c }
 		 \times 2/3 { r8  b-[ f] }
-		 \property Voice.TupletBracket \set #'edge-flare = #'(0.5 . 0.5)
+		 \property Voice.TupletBracket \set #'bracket-flare = #'(0.5 . 0.5)
 		 \times 2/3 { r8 b r8 }
 		 c4 |
 		 
